@@ -1,3 +1,8 @@
+2010-01-12  Andreia Gaita  <avidigal@novell.com>
+
+	* System.Windows.Browser/ScriptableArraysTest.cs: Added test for
+	array index access
+
 2010-01-11  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* System.Net/CookieContainerTest.cs: New. Unit tests for 
